
* GITHUB#12107: Remove deprecated KnnVectorField, KnnVectorQuery, VectorValues and
  LeafReader#getVectorValues. (Luca Cavanna)

* GITHUB#12296: Make IndexReader and IndexReaderContext classes explicitly sealed.
  They have already been runtime-checked to only be implemented by the specific classes
  so this is effectively a non-breaking change.

New Features
---------------------

* LUCENE-10010 Introduce NFARunAutomaton to run NFA directly. (Patrick Zhai)

* LUCENE-10626 Hunspell: add tools to aid dictionary editing:
  analysis introspection, stem expansion and stem/flag suggestion (Peter Gromov)

Improvements
---------------------

* LUCENE-10416: Update Korean Dictionary to mecab-ko-dic-2.1.1-20180720 for Nori.
  (Uihyun Kim)

* LUCENE-10614: Properly support getTopChildren in RangeFacetCounts. (Yuting Gan)

* LUCENE-10652: Add a top-n range faceting example to RangeFacetsExample. (Yuting Gan)

Optimizations
---------------------

* GITHUB#11857, GITHUB#11859, GITHUB#11893, GITHUB#11909: Hunspell: improved suggestion performance (Peter Gromov)

* GITHUB#12160: Concurrent rewrite for AbstractKnnVectorQuery. (Kaival Parikh)

Bug Fixes
---------------------

* LUCENE-10599: LogMergePolicy is more likely to keep merging segments until
  they reach the maximum merge size. (Adrien Grand)

* GITHUB#12220: Hunspell: disallow hidden title-case entries from compound middle/end

Other
---------------------

* LUCENE-10376: Roll up the loop in VInt/VLong in DataInput. (Guo Feng)

* LUCENE-10283: The minimum required Java version was bumped from 11 to 17.
  (Adrien Grand, Uwe Schindler, Dawid Weiss, Robert Muir)

* LUCENE-10253: The @BadApple annotation has been removed from the test
  framework. (Adrien Grand)

* LUCENE-10393: Unify binary dictionary and dictionary writer in Kuromoji and Nori.
  (Tomoko Uchida, Robert Muir)

* LUCENE-10475: Merge dictionary builders in `util` package into `dict` package in Kuromoji and Nori.